fix to change in database

--- a/src/main/resources/templates/adminDashBoard/fragments/courseContent.html
+++ b/src/main/resources/templates/adminDashBoard/fragments/courseContent.html
@@ -88,6 +88,7 @@
                                     <th>Total Lessons</th>
                                     <th>Created At</th>
                                     <th>Updated At</th>
+                                    <th>Author</th>
                                     <th>Status</th>
                                     <th>Actions</th>
                                 </tr>
@@ -116,6 +117,7 @@
                                     <th>Total Lessons</th>
                                     <th>Created At</th>
                                     <th>Updated At</th>
+                                    <th>Author</th>
                                     <th>Status</th>
                                     <th>Actions</th>
                                 </tr>
@@ -144,6 +146,7 @@
                                     <th>Total Lessons</th>
                                     <th>Created At</th>
                                     <th>Updated At</th>
+                                    <th>Author</th>
                                     <th>Status</th>
                                     <th>Actions</th>
                                 </tr>
@@ -172,6 +175,7 @@
                                     <th>Total Lessons</th>
                                     <th>Created At</th>
                                     <th>Updated At</th>
+                                    <th>Author</th>
                                     <th>Status</th>
                                     <th>Actions</th>
                                 </tr>
@@ -200,6 +204,7 @@
                                     <th>Total Lessons</th>
                                     <th>Created At</th>
                                     <th>Updated At</th>
+                                    <th>Author</th>
                                     <th>Status</th>
                                     <th>Actions</th>
                                 </tr>
