--- a/src/main/resources/templates/adminDashBoard/fragments/instructorRequestContent.html
+++ b/src/main/resources/templates/adminDashBoard/fragments/instructorRequestContent.html
@@ -78,6 +78,7 @@
                                 <!-- Table head -->
                                 <thead>
                                     <tr>
+                                        <th>User ID</th>
                                         <th>Instructor name</th>
                                         <th>Requested Date</th>
                                         <th>Subject</th>
@@ -104,6 +105,7 @@
                                 <!-- Table head -->
                                 <thead>
                                     <tr>
+                                        <th>User ID</th>
                                         <th>Instructor name</th>
                                         <th>Requested Date</th>
                                         <th>Subject</th>
@@ -130,6 +132,7 @@
                                 <!-- Table head -->
                                 <thead>
                                     <tr>
+                                        <th>User ID</th>
                                         <th>Instructor name</th>
                                         <th>Requested Date</th>
                                         <th>Subject</th>
