--- a/src/main/resources/templates/adminDashBoard/fragments/sidebar.html
+++ b/src/main/resources/templates/adminDashBoard/fragments/sidebar.html
@@ -86,6 +86,12 @@
                     </a>
                 </li>
 
+                <li class="nav-item">
+                    <a class="nav-link" th:href="@{/admin/reports}">
+                        <i class="fas fa-fw fa-comment"></i>
+                        <span>Report</span>
+                    </a>
+                </li>
                 <!-- Menu item 7 -->
                 <li class="nav-item">
                     <a class="nav-link" th:href="@{/admin/businessRule}">
