security lesson video

--- a/src/main/resources/templates/instructorDashboard/fragments/coursesContent.html
+++ b/src/main/resources/templates/instructorDashboard/fragments/coursesContent.html
@@ -170,7 +170,7 @@
 
                                 <!-- Enrolled item -->
                                 <td class="text-center">
-                                    <span class="fw-bold">0</span>
+                                    <span class="fw-bold" th:text="${course.totalStudentEnrolled}"></span>
                                 </td>
 
                                 <!-- Status item -->
